--- a/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
+++ b/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
@@ -299,7 +299,7 @@
         <div class="d-flex" id="chart">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item" style="font-size: 15px">
-              <a class="nav-link" routerLink="./reports/create-report"
+              <a class="nav-link" routerLink="./reportsv2/create-report"
                 ><i
                   class="fa-solid fa-chart-simple"
                   style="padding-right: 6px"
