--- a/src/app/features/lms/grp/components/quotation/components/quick/quick.component.css
+++ b/src/app/features/lms/grp/components/quotation/components/quick/quick.component.css
@@ -1,12 +1,123 @@
 .container {
-    background: #F5F6F8;
+  background: #F5F6F8;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+#container {
+  background: #FFF;
+  border: 1px solid rgba(220, 220, 220, 0.85);
+  border-radius: 5px;
+  flex: 1;
+  padding: 20px;
+}
+
+.client-details,
+.product-details {
+  color: #000;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  padding: 10px;
+}
+
+.label {
+  color: #000;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding: 20px, 20px;
+  margin-left: 10px;
+  padding-bottom: 8px;
+}
+
+.select {
+  width: 300px;
+  height: auto;
+  flex-shrink: 0;
+  border-radius: 4px;
+  background: #FFF;
+  margin: 10px;
+}
+
+.date {
+  width: 300px;
+  height: 35px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 0.5px solid #868E96;
+  background: #FFF;
+  margin-left: 10px;
+}
+
+#inline {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.radio-group {
+  color: #000;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-left: 10px;
+}
+
+.button {
+  display: inline-flex;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 4px;
+  background: #00529B;
+  color: white;
+  float: right;
+  margin-top: 10px;
+}
+
+.circle {
+  width: 30px;
+  height: 30px;
+  background-color: #00529B;
+  color: white;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 16px;
+  font-family: Roboto;
+  font-weight: 400;
+  margin: 0 auto;
+  line-height: 30px;
+}
+
+.text {
+  color: #00529B;
+  font-size: 14px;
+  font-family: Roboto;
+  font-weight: 400;
+  margin: 10px 0;
+}
+
+@media screen and (max-width:1400px) and (min-width:280px),
+(max-width:280px) {
+  .container {
+    background: #f5f6f8;
     display: flex;
     flex-direction: column;
     align-items: stretch;
     justify-content: space-between;
     padding: 20px;
   }
-  
+
   #container {
     background: #FFF;
     border: 1px solid rgba(220, 220, 220, 0.85);
@@ -14,115 +125,16 @@
     flex: 1;
     padding: 20px;
   }
-.client-details, 
-.product-details {
-    color: #000;
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    padding: 10px;
-}
-.label {
-    color: #000;
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    padding: 20px, 20px;
-    margin-left: 10px;
-}
-.select {
-    width: 300px;
-    height: auto;
-    flex-shrink: 0;
-    border-radius: 4px;
-    background: #FFF;
-    margin: 10px;
-}
-.date{
-    width: 300px;
-    height: 35px;
-    flex-shrink: 0;
-    border-radius: 4px;
-    border: 0.5px solid #868E96;
-    background: #FFF;
-    margin-left: 10px;
-}
-#inline {
-    display: inline-block;
-    margin-right: 20px;
-}
-.radio-group {
-    color: #000;
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin-left: 10px;
-}
-.button {
+
+  .button {
     display: inline-flex;
-    height: 40px;
+    padding: 10px;
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
     border-radius: 4px;
     background: #00529B;
     color: white;
-    float: right;
-    margin-top: 10px;
-}
-
-.circle {
-    width: 30px;
-    height: 30px;
-    background-color: #00529B;
-    color: white;
-    border-radius: 50%;
-    text-align: center;
-    font-size: 16px;
-    font-family: Roboto;
-    font-weight: 400;
-    margin: 0 auto;
-    line-height: 30px;
+    float: center;
   }
-  .text {
-    color: #00529B;
-    font-size: 14px;
-    font-family: Roboto;
-    font-weight: 400;
-    margin: 10px 0;
-  }
-
-@media screen and (max-width:1400px) and (min-width:280px), (max-width:280px)  {
-     .container {
-        background: #f5f6f8;
-        display: flex;
-        flex-direction: column;
-        align-items: stretch;
-        justify-content: space-between;
-        padding: 20px;
-      }
-      #container {
-        background: #FFF;
-        border: 1px solid rgba(220, 220, 220, 0.85);
-        border-radius: 5px;
-        flex: 1;
-        padding: 20px;
-      }
-    .button {
-        display: inline-flex;
-        padding: 10px;
-        justify-content: center;
-        align-items: center;
-        flex-shrink: 0;
-        border-radius: 4px;
-        background: #00529B;
-        color: white;
-        float: center;
-    }
 }
