--- a/src/app/features/lms/grp/components/quotation/components/quick/quick.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/quick/quick.component.html
@@ -199,12 +199,12 @@
       </div>
       <div class="form-group col-md-4 col-lg-4 col-xs-12 col-sm-12">
           <div class="label"><label>Commission rate</label></div>
-          <div class="mx-2">
+          <div class="form-group mx-3">
               <input type="text"
                          pInputText
                          class="form-control"
                           id='commissionRate'
-                          [style]="{ width: '80%', height: '45px' }"
+                          [style]="{ width: '90%', height: '45px' }"
                           formControlName='commissionRate'
                          >
           </div>
