VQ-876, VQ-825 | Modification on Quotation and Proposals Screens

--- a/src/app/features/base/components/header-sub-menu/header-sub-menu.component.css
+++ b/src/app/features/base/components/header-sub-menu/header-sub-menu.component.css
@@ -85,3 +85,7 @@
   background-image: url('src/assets/svg/gis.svg'); /* Replace with the actual path to your SVG file */
 
 }
+
+.sub-card {
+  margin-right: 1.5rem;
+}
