--- a/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
+++ b/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
@@ -337,6 +337,10 @@
 
 <div  class="modal fade" id="NewQuoteModal" tabindex="-1" role="dialog" aria-labelledby="NewQuoteModalTitle"
   aria-hidden="true">
+<!--
+  <div class="modal fade" id="reassignModal" [style.z-index]="zIndex"
+     [ngClass]="{ 'show': reassignModalVisible }" tabindex="-1" role="dialog" aria-labelledby="reassignModalTitle" aria-hidden="true"> -->
+
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div #NewQuoteModal class="modal-content" style="border: 0.2px solid var(--primary-color);">
       <div class="modal-body card-modal">
