--- a/src/app/features/lms/ind/components/quotation/components/medical-history/medical-history.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/medical-history/medical-history.component.html
@@ -12,6 +12,9 @@
 
   <div class="full-border px-5" style="padding: 0;">
     <div>
+      <div class="d-flex justify-content-between pt-3 siz">
+        <div class="fw-bold text-black">Medical history</div>
+      </div>
       <div class="text-black">
 
         <div class="col fadeIn">
